fix overflow on android and non-macOs

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,7 +7,7 @@
 body {
   @apply bg-white text-ink;
   font-family: 'Spectral', serif;
-  // overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 /* Layout */
